overlapping heirarchy issue, blank comment issue

--- a/src/global/_styles.scss
+++ b/src/global/_styles.scss
@@ -468,6 +468,9 @@ span {
   }
 }
 
+.box {
+  inset: 0px 0 15px !important;
+}
 // Loader 
 
 .loaderWrapper {
